hphp/test/zend/good/zend/ns_023.php
<?php
namespace test\foo;

var_dump(__NAMESPACE__);