hphp/test/zend/bad/ns_044.php
<?php
namespace test\ns1;

var_dump(INI_ALL);